Sforce8 Project Data/src/objects/Worker__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>退社されたとき、チェックを入れて下さい！</inlineHelpText>
        <label>退社</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>携帯電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>ひらがな</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>扱者</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>扱者名</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I10000000LA0GEAW_00N10000001LDjkEAG</fullName>
        <active>true</active>
        <field>Lead__c.Field316__c</field>
        <filterItems>
            <field>Worker__c.Field4__c</field>
            <operation>equals</operation>
            <value>接客, 番頭, フロント</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>ご予約_おつき係</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000LA0GEAW_00N10000001LDjpEAG</fullName>
        <active>true</active>
        <field>Lead__c.Field317__c</field>
        <filterItems>
            <field>Worker__c.Field4__c</field>
            <operation>equals</operation>
            <value>接客, 番頭, フロント</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>ご予約_部屋係</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I10000000MW2uEAG_00N10000001NuL7EAK</fullName>
        <active>true</active>
        <field>Jinyakeyword__c.User__c</field>
        <filterItems>
            <field>Worker__c.Field4__c</field>
            <operation>equals</operation>
            <value>フロント, 接客, 板前, 番頭, フロント, 経理</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>キーワード_管理者</name>
    </namedFilters>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>